2006-01-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4, configure: Fix LD_SEARCH_FLAGS setting in tcl.m4

	* example/unbuffer: whitespace police

	* example/beer.exp: brace exprs

	* expect.man: use clock instead of exec date, minor nroff fixes.

2006-01-24  Andreas Kupries <andreask@activestate.com>

	* tclconfig/tcl.m4: Updated to TEA 3.5
	* configure.in:     Ditto.
	* configure:        Regenerated.

2006-01-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/expect.test: ensure iso8859-1 for /tmp/null (steffen).

2005-09-19  Andreas Kupries <andreask@activestate.com>

	* exp_chan.c (ExpOutputProc): Added guard to intercept and ignore
	  empty write operations, i.e. operations trying to write zero
	  bytes.

2005-09-09  Andreas Kupries <andreask@activestate.com>

	* exp_chan.c (ExpBlockModeProc): No, stdin is not ok (See last
	  entry). Fixed.

2005-07-07  Andreas Kupries <andreask@activestate.com>

	* exp_chan.c (ExpBlockModeProc): [Expect SF Bug 1108551]. Excluded
	  manipulation of the blocking status for stdin/stderr. This is
	  handled by the Tcl core itself and we must absolutely not pull
	  the rug out from under it. The standard setting to non-blocking
	  will mess with the core which had them set to blocking, and
	  makes all its decisions based on that assumption. Setting to
	  non-blocking can cause hangs and crashes. Stdin is ok however,
	  apparently.

	  This problem was introduced at '2004-06-14'.

2005-06-22  Andreas Kupries <andreask@activestate.com>

	* exp_chan.c:    Fixed bug causing crash of expect on exit when a
	* exp_command.c: Tcl channel is used with -(leave)open more than
	* exp_command.h: once. It tried to close such channels multiple
	  times, going through already freed memory. Added data structures
	  to track and refcount all such channels, to close them only when
	  the last user goes away.

2005-06-09  Andreas Kupries <andreask@activestate.com>

	* Makefile.in:  Upgraded build system to TEA 3.2.
	* configure.in: